# Lab4-SD

./: Banconote.in  CMakeLists.txt  Colectie.h  Colectie.tpp  Iterator.h  MultimeElementeGenericeOrdonata.cpp  MultimeElementeGenericeOrdonata.h  MultimeElementeGenericeOrdonata.tpp  Node.cpp  Node.h  Tranzactie.cpp  Tranzactie.h  UI.cpp  UI.h  main.cpp
